--- a/EOkul/app/build.gradle
+++ b/EOkul/app/build.gradle
@@ -4,12 +4,12 @@ plugins {
 
 android {
     namespace 'com.ahmetayds.eokul'
-    compileSdk 33
+    compileSdk 34
 
     defaultConfig {
         applicationId "com.ahmetayds.eokul"
         minSdk 23
-        targetSdk 33
+        targetSdk 34
         versionCode 1
         versionName "1.0"
 
@@ -26,6 +26,13 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
+//======================================
+    buildFeatures{
+        viewBinding true
+    }
+//======================================
+
 }
 
 dependencies {
