--- a/SQLiteOrnek3/app/src/main/AndroidManifest.xml
+++ b/SQLiteOrnek3/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.SQLiteOrnek3"
         tools:targetApi="31">
         <activity
+            android:name=".adminSayfasi"
+            android:exported="false" />
+        <activity
             android:name=".duzenlemeSayfasi"
             android:exported="false" />
         <activity
