--- a/HastaneUygulamasi/app/src/main/AndroidManifest.xml
+++ b/HastaneUygulamasi/app/src/main/AndroidManifest.xml
@@ -13,6 +13,15 @@
         android:theme="@style/Theme.HastaneUygulamasi"
         tools:targetApi="31">
         <activity
+            android:name=".gecmisRandevular"
+            android:exported="false" />
+        <activity
+            android:name=".randevuAl"
+            android:exported="false" />
+        <activity
+            android:name=".hastaAnaSayfa"
+            android:exported="false" />
+        <activity
             android:name=".kayitSayfasi"
             android:exported="false" />
         <activity
