--- a/HastaneUygulamasi/app/src/main/AndroidManifest.xml
+++ b/HastaneUygulamasi/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.HastaneUygulamasi"
         tools:targetApi="31">
         <activity
+            android:name=".doktorRandevuList"
+            android:exported="false" />
+        <activity
+            android:name=".doktorSistemGirisi"
+            android:exported="false" />
+        <activity
             android:name=".gecmisRandevular"
             android:exported="false" />
         <activity
